bot-api/bot-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-api-svc
spec:
  #type: NodePort
  ports:
    - protocol: TCP
      port: 8080
  selector:
    type: bot-api
    service: bot-api

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      type: bot-api
      service: bot-api
  template:
    metadata:
      labels:
        type: bot-api
        service: bot-api
    spec:
      containers:
        - name: bot-api
          image: tock/bot_api:latest
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1 # Defaults to 1
            periodSeconds: 10 # Defaults to 10
            failureThreshold: 3 # Defaults to 3
