bot-api/bot-api.ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bot-api
spec:
  rules:
    - host: bot-api
      http:
        paths:
          - path: /
            backend:
              serviceName: bot-api-svc
              servicePort: 8080
